[package]
name = "earwax"
version = "0.1.7"
authors = ["Daniel Rivas <ers.daniel+dev@gmail.com>"]
build = "build.rs"

description = "Audio decoding library for Rust based on ffmpeg"

homepage = "https://github.com/danielrs/earwax"
documentation = "https://docs.rs/earwax"
repository = "https://github.com/danielrs/earwax"

license-file = "./LICENSE"
edition = "2018"

[dependencies]
libc = "0.2"
num = "0.2"

[dev-dependencies]
cpal = "0.11"
bytemuck = "1.1"

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
